# easy_tdx

./: .gitignore  CHANGELOG.md  README.md  easy_tdx.spec  pyproject.toml  requirements-dev.txt  run_all_strategies.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.understand-anything/: .understandignore  config.json  fingerprints.json  meta.json
.understand-anything/.trash-1784704687/: assemble-review.json  assembled-graph.json  batch-0.json  batch-1.json  batch-10.json  batch-11.json  batch-12.json  batch-13.json  batch-14.json  batch-15.json  batch-16.json  batch-17.json  batch-18.json  batch-19.json  batch-2.json  batch-20.json  batch-21.json  batch-22.json  batch-23.json  batch-24.json  batch-3.json  batch-4.json  batch-5.json  batch-6.json  batch-7.json  batch-8.json  batch-9.json  batches.json  fingerprint-input.json  import-input.json  import-map.json  layers.json  review.json  tour.json
.understand-anything/.trash-1784704687/tmp/: batch-1-input.json  batch-1-struct.json  batch-prompts.json  build-prompt.py  file-analyzer-template.md  generate_batch.py  generate_frontend_batch.py  ua-file-analyzer-input-2.json  ua-file-analyzer-input-3.json  ua-file-analyzer-input-6.json  ua-file-analyzer-input-requested-5.json  ua-file-extract-results-2.json  ua-file-extract-results-3.json  ua-file-extract-results-6.json  ua-file-extract-results-requested-5.json  ua-inline-validate.cjs
docs/: conf.py  indicator-bias-signal.md  packaging.md  回测系统完全上手手册.html
docs/superpowers/specs/: 2026-06-12-quantitative-factor-engine-design.md
src/easy_tdx/: MyTT.py  MyTT.pyi  __init__.py  __main__.py  client.py  indicator.py  tray.py
src/easy_tdx/backtest/: execution.py
src/easy_tdx/backtest/strategies/: builtin.py  presets.py
src/easy_tdx/chanlun/: analyser.py
src/easy_tdx/cli/: __init__.py  cmd_announcement.py  cmd_factor.py  cmd_web.py
src/easy_tdx/cninfo/: client.py  models.py
src/easy_tdx/commands/: security_bars.py
src/easy_tdx/factor/: analysis.py  transform.py
src/easy_tdx/factor/builtin/: __init__.py  chanlun.py  momentum.py  quality.py  technical.py  value.py  volatility.py  volume.py
src/easy_tdx/mac/: adjust.py  client.py
src/easy_tdx/screen/: __init__.py  cli.py  ranker.py  scanner.py
src/easy_tdx/web/: app.py
src/easy_tdx/web/routers/: market.py
strategies/: README.md  bias_reversal.py  bollinger_breakout.py  expma_cross.py  kdj_golden.py  ma_cross.py  macd_cross.py  rsi_reversal.py  turtle_breakout.py  volume_price.py
tests/unit/: test_backtest_execution.py  test_backtest_slippage.py  test_chanlun_phase3.py  test_cninfo.py  test_decode_errors.py  test_factor_analysis.py  test_factor_transform.py  test_failover.py  test_mac_qfq_integration.py  test_mac_tick_charts.py  test_scanner.py  test_screen.py  test_web_api.py  test_web_backtest.py
web-ui/src/: api.ts  types.ts
web-ui/src/components/: StockSearchInput.vue  StocksPicker.vue  SymbolPicker.vue
web-ui/src/composables/: useStockSearch.ts
web-ui/src/stores/: backtest.ts
web-ui/src/views/: OptimizeView.vue
